1.13
  * when the HTTP server closes, flush any existing data
    Changed files: wc/proxy/HttpServer.py

1.12
  * distribution fixes:
    - install template files
    - generate md5sums and gpg signatures for dist file
    - removed unused make targets
    - add misssing files to MANIFEST
    Changed files: Makefile.am, setup.py, MANIFEST.in

1.11
  * added "What you can do" entry
    Changed files: README
  * Filter rule updates:
    - remove <body ondragstart, oncontextmenu, onselectstart, onkeydown>
    - prevent document.onmousedown rebinding
    - some ad filter updates
    - remove more headers with client infos
    - updated blacklists and whitelists
    Changed files: config/{scripting,adverts,misc}.zap
  * Html filtering:
    - fixed nasty bug in HTML filter buffer handling which resulted in
      lost HTML data
    - also apply filter rules to document.write content
    - support <base href> for JS src fetching
    - wrap all javascript code in <!-- ... //--> comment
    Changed files: wc/filter/HtmlParser.py
  * HTML parser:
    - handle missing > in "</a <a b=c>"
    Changed files: wc/parser/htmllex.l
  * fix return types in the daemon package
    Changed files: wc/daemon/_posix.py
  * use builtin dict type for configuration
    Changed files: wc/__init__.py
  * convert install paths to platform specific representation
    Changed files: setup.py
  * 100 continue: switch back to response state only after reading headers
    Changed files: wc/proxy/HttpServer.py
  * be more HTTP/1.1 conform:
    - remove hop-by-hop headers
    - add Connection: Keep-Alive header for persistent connections
    - some header values are parsed with better error recovery
    Changed files: wc/proxy/{__init__, HttpClient, HttpServer}.py,
       wc/__init__.py
    Added files: wc/proxy/Headers.py
  * handle partial proxy request uris
    Changed files: wc/proxy/{__init__,ClientServerMatchmaker}.py
  * embedded the spidermonkey javascript engine to reduce dependencies