@@ -1,2 +1,3 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><head><title tal:content="title">Blocked by WebCleaner</title></head>
 <body bgcolor="#ffffff"></body></html>
